Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ textarea{ height:140px; resize:none; }
     <aside class="sidebar">
 
         <div class="photo-wrap">
-            <img src="assets/images/ProfileImg.png" alt="Darshan Lakade">
+            <img src="ProfileImg.png" alt="Darshan Lakade">
         </div>
 
         <div class="name" >Darshan Lakade</div>
@@ -401,7 +401,7 @@ textarea{ height:140px; resize:none; }
             </a>
             <a class="chip" href="tel:+919356431932">
                 <span>9356431932</span>
-                <img class="icon" src="assets/icons/phone-504.svg">
+                <img class="phone-504.svg">
             </a>
         </div>
         
