Add styles for project link states

--- a/index.html
+++ b/index.html
@@ -373,6 +373,14 @@ textarea{ height:140px; resize:none; }
     font-weight: 600;
     color: var(--muted);
 }
+.project-link,
+.project-link:visited,
+.project-link:hover,
+.project-link:active {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
 </style>
 
 
